* 2007-08-16 - manuel.kraft@open-xchange.com

 - Bugfix ID#8839 "Virtual" PIM folders are not updated when changing users displayname

* 2007-08-16 - choeger@open-xchange.com

  - Bugfix ID#8895 Misleading server response if "listuser --csv" doesn't find any match

* 2007-08-14 - dennis.sieben@open-xchange.com

  - Bugfix ID#8802 no error message when display_name is changed
  - Bugfix ID#8837 'createuser' command line tool shows wrong default settings for modularization
  
* 2007-08-07 - dennis.sieben@open-xchange.com

  - Bugfix ID#8593 Operations by name not possible
  - Bugfix ID#8571 Problems with multiple unique displaynames for internal users
  - Bugfix ID#8703 listcontext has incorrect data-mapping

* 2007-08-07 - choeger@open-xchange.com

 - Bugfix ID#8679 new admin does not work with log4j
   
* 2007-08-06 - manuel.kraft@open-xchange.com

 - Bugfix ID#8694: Users which are downgraded to "Basic" are still able to create public folders.

* 2007-08-02 - choeger@open-xchange.com

  - Bugfix ID#8666 imapLogin field get lost after changing module access
  - Bugfix ID#8611 admindaemon must use groupware config files
    now only system.properties, configdb.properties and cache.ccf is part of
    open-xchange-admin. The rest is used from the groupware config files (see system.properties)

* 2007-07-26 - dennis.sieben@open-xchange.com

 - Bugfix ID#8553 CLT: After running CLT no reasonable message on console appear for user
 
* 2007-07-25 - choeger@open-xchange.com

 - Bugfix ID#8556 CLTs: <datevalue> not working in "createuser"
   fixed parsing of dates and added dateformat format environment options,
   see --environment commandline parameter for known options

* 2007-07-11 - manuel.kraft@open-xchange.com

 - Bugfix ID#8400 listresource: attribute available not in csv output

* 2007-07-11 - choeger@open-xchange.com

 - Bugfix ID#8397 listgroup: "email" in csv output

* 2007-07-09 - choeger@open-xchange.com
