@@ -1,3 +1,7 @@
+* 2007-08-16 - dennis.sieben@open-xchange.com
+
+ - Bugfix ID#8830 if user is deleted and plugin error occures, no message is shown.
+ 
 * 2007-08-16 - manuel.kraft@open-xchange.com
 
  - Bugfix ID#8839 "Virtual" PIM folders are not updated when changing users displayname
